--- a/citations.bib
+++ b/citations.bib
@@ -256,6 +256,7 @@
 
 @book{bishop_deep_2023,
 	title = {Deep learning: Foundations and concepts},
+	url = {https://www.bishopbook.com/},
 	publisher = {Springer Nature},
 	author = {Bishop, Christopher M and Bishop, Hugh},
 	date = {2023},
@@ -357,14 +358,6 @@
 	keywords = {Generalization, Learning accuracy, Learning from demonstration, Reinforcement learning, Reward function, Survey},
 }
 
-@misc{schulman_proximal_2017-1,
-	title = {Proximal Policy Optimization Algorithms},
-	url = {https://arxiv.org/abs/1707.06347},
-	author = {Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
-	date = {2017},
-	note = {\_eprint: 1707.06347},
-}
-
 @misc{silver_lectures_2015,
 	title = {Lectures on Reinforcement Learning},
 	url = {https://www.davidsilver.uk/teaching/},
@@ -449,4 +442,20 @@
 	url = {https://speech.ee.ntu.edu.tw/~hylee/ml/ml2021-course-data/cnn_v4.pdf},
 	author = {Lee, Hung-Yi},
 	date = {2021},
+}
+
+@misc{narvekar_curriculum_2020,
+	title = {Curriculum Learning for Reinforcement Learning Domains: A Framework and Survey},
+	url = {https://arxiv.org/abs/2003.04960},
+	author = {Narvekar, Sanmit and Peng, Bei and Leonetti, Matteo and Sinapov, Jivko and Taylor, Matthew E. and Stone, Peter},
+	date = {2020},
+	note = {\_eprint: 2003.04960},
+}
+
+@misc{simonyan_very_2015,
+	title = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+	url = {https://arxiv.org/abs/1409.1556},
+	author = {Simonyan, Karen and Zisserman, Andrew},
+	date = {2015},
+	note = {\_eprint: 1409.1556},
 }
